# traffic

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  README.md  RUNBOOK.md  cli.py  docker-compose.yml  pyproject.toml
agents/: __init__.py  baselines.py  dqn_agent.py  impala_agent.py  ppo_agent.py
analysis/: __init__.py  compare.py  visualize.py
dashboard/: __init__.py  server.py
dashboard/static/: index.html  metrics.html  replay.html
docs/: API.md  ENVIRONMENT.md  QUICKSTART.md  SCRIPTS.md  TROUBLESHOOTING.md
env/: __init__.py  config.py  microservice_env.py  microservice_env_hard.py  request_generator.py  services.py  wrappers.py
examples/: __init__.py  export_metrics_from_dashboard.py  full_pipeline.py  run_baseline.py  run_with_curriculum.py
scripts/: benchmark.py  eval_all_agents.py  healthcheck.py  run_experiment.py  sweep_ppo.py
simulator/: __init__.py  runner.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_curriculum.py  test_dashboard_api.py  test_env.py  test_integration.py  test_wrappers.py
training/: __init__.py  curriculum.py  metrics.py  replay_buffer.py  train_dqn.py  train_impala.py  train_ppo.py
