[project]
name = "rl-traffic-control"
version = "0.1.0"
description = "RL-Traffic-Control: Learning to Route Internet Requests Under Failure"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "stable-baselines3>=2.1.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "matplotlib>=3.7.0",
    "tensorboard>=2.14.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
